--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "electron-app",
   "productName": "electron-app",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "My Electron application description",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/danialhasan/socialbridge_macos.git"
+  },
   "main": ".webpack/main",
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
+    "lint": "eslint --ext .ts,.tsx .",
+    "pipeline": "npm run package && npm run make && npm run publish"
   },
   "keywords": [],
   "author": {
@@ -24,6 +29,7 @@
     "@electron-forge/maker-squirrel": "^6.0.4",
     "@electron-forge/maker-zip": "^6.0.4",
     "@electron-forge/plugin-webpack": "^6.0.4",
+    "@electron-forge/publisher-github": "^6.0.4",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "@vercel/webpack-asset-relocator-loader": "^1.7.3",
@@ -39,6 +45,8 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
+    "@electron/osx-sign": "^1.0.4",
+    "dotenv": "^16.0.3",
     "electron-log": "^4.4.8",
     "electron-squirrel-startup": "^1.0.0",
     "update-electron-app": "^2.0.1"
