--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "electron-app",
-  "productName": "electron-app",
+  "name": "socialbridge.app",
+  "productName": "socialbridge.app",
   "version": "1.0.2",
   "description": "My Electron application description",
   "repository": {
@@ -14,7 +14,8 @@
     "make": "electron-forge make",
     "publish": "electron-forge publish",
     "lint": "eslint --ext .ts,.tsx .",
-    "pipeline": "npm run package && npm run make && npm run publish"
+    "pipeline": "npm run package && npm run make && npm run publish",
+    "sign": "electron-osx-sign out/socialbridge.app-darwin-x64/socialbridge.app.app --provisioning-profile=cert/certificate.p12"
   },
   "keywords": [],
   "author": {
@@ -45,7 +46,6 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
-    "@electron/osx-sign": "^1.0.4",
     "dotenv": "^16.0.3",
     "electron-log": "^4.4.8",
     "electron-squirrel-startup": "^1.0.0",
