--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "socialbridge.app",
-  "productName": "socialbridge.app",
+  "name": "socialbridge-app",
+  "productName": "socialbridge-app",
   "version": "1.0.2",
-  "description": "My Electron application description",
+  "description": "Manage your social media with Notion",
   "repository": {
     "type": "git",
     "url": "https://github.com/danialhasan/socialbridge_macos.git"
@@ -44,9 +44,11 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
+    "css-loader": "^6.7.3",
     "dotenv": "^16.0.3",
     "electron-log": "^4.4.8",
     "electron-squirrel-startup": "^1.0.0",
+    "style-loader": "^3.3.1",
     "update-electron-app": "^2.0.1"
   }
 }
