--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "socialbridge-app",
   "productName": "socialbridge-app",
-  "version": "1.0.2",
+  "version": "1.0.7",
   "description": "Manage your social media with Notion",
   "repository": {
     "type": "git",
@@ -12,7 +12,7 @@
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
-    "publish": "electron-forge publish",
+    "publish": "echo 'DO NOT FORGET TO UPDATE VERSION IN PACKAGE.JSON!!' && electron-forge publish",
     "lint": "eslint --ext .ts,.tsx .",
     "pipeline": "npm run package && npm run make && npm run publish",
     "sign": "electron-osx-sign out/socialbridge.app-darwin-x64/socialbridge.app.app --provisioning-profile=cert/certificate.p12"
